--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
   <header class="header">
     <h1>ToDos</h1>
-    <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngmodel)]="newTodo.title" (keyup.enter)="addTodo()">
+    <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
   </header>
   <section class="main" *ngIf="todos.length > 0">
     <ul class="todo-list">
@@ -15,6 +15,6 @@
     </ul>
   </section>
   <footer class="footer" *ngIf="todos.length > 0">
-    <span class=todo-count><strong>{{todos.length}}</strong>{{todos.length == ? 'item' : 'items'}} left</span>
+    <span class=todo-count><strong>{{todos.length}}</strong>{{todos.length == 1 ? 'item' : 'items'}} left</span>
   </footer>
 </section>
