--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -61,7 +61,7 @@ body{
   font-size: 100px;
   font-weight: 100;
   text-align: center;
-  color: rgba(175,47,47,0.15);
+  color: rgba(124, 109, 172, 0.15);
   -webkit-text-rendering: optimizeLegibility;
 	-moz-text-rendering: optimizeLegibility;
   text-rendering: optimizeLegibility;
@@ -119,7 +119,7 @@ label[for='toggle-all']{
 }
 
 .toggle-all:checked:before {
-	color: #737373;
+	color: #797979;
 }
 
 .todo-list {
@@ -200,13 +200,13 @@ label[for='toggle-all']{
 	height: 40px;
 	margin: auto 0;
 	font-size: 30px;
-	color: #cc9a9a;
+	color: #9AA0CC;
 	margin-bottom: 11px;
 	transition: color 0.2s ease-out;
 }
 
 .todo-list li .destroy:hover {
-	color: #af5b5e;
+	color: #5B61AF;
 }
 
 .todo-list li .destroy:after {
@@ -280,11 +280,11 @@ label[for='toggle-all']{
 }
 
 .filters li a:hover {
-	border-color: rgba(175, 47, 47, 0.1);
+	border-color: rgba(47, 62, 175, 0.10);
 }
 
 .filters li a.selected {
-	border-color: rgba(175, 47, 47, 0.2);
+	border-color: rgba(47, 131, 175, 0.20);
 }
 
 .clear-completed,
